--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-sass": "^0.1.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
