--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1",
     "react-cookie": "^7.2.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "swiper": "^11.1.14",
+    "react-router-dom": "^6.24.1",
     "sass": "^1.80.3",
+    "swiper": "^11.1.14",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -36,6 +36,8 @@
     "globals": "^15.9.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
+    "postcss": "^8.4.47",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
