--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.24.1",
     "sass": "^1.80.3",
     "swiper": "^11.1.14",
+    "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
